Update to A Bissel Torah branding

--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
     
     <div class="hero-product">
       <div class="product-icon">📖✨</div>
-      <h2 class="product-name">Torah Tab</h2>
-      <p class="product-desc">Daily Torah verses, commentaries, and inspiration on every new browser tab.</p>
+      <h2 class="product-name">A Bissel Torah</h2>
+      <p class="product-desc">A little Torah, every tab — Daily verses, commentaries, and inspiration on every new browser tab.</p>
       <a href="https://chrome.google.com/webstore" class="cta-btn">Get the Extension</a>
     </div>
   </section>
