--- a/privacy.html
+++ b/privacy.html
@@ -71,7 +71,7 @@
     <h1>Privacy Policy</h1>
     <p class="updated">Last updated: November 2024</p>
     
-    <p>NIFLAOT LLC ("we", "us", or "our") operates the Torah Tab browser extension and related services. This page informs you of our policies regarding the collection, use, and disclosure of personal information.</p>
+    <p>NIFLAOT LLC ("we", "us", or "our") operates the A Bissel Torah browser extension and related services. This page informs you of our policies regarding the collection, use, and disclosure of personal information.</p>
     
     <h2>Information We Collect</h2>
     <p>We collect minimal information necessary to provide our services:</p>
